Fix issue with login screen on Safari

--- a/public/stylesheets/login/login.css
+++ b/public/stylesheets/login/login.css
@@ -148,7 +148,8 @@
 }
 
 .underline-middle {
-  float: left
+  float: left;
+  width: 14px;
 }
 
 .underline-right {
